// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multi-url-environment > custom environment 1`] = `
"import { AcmeClient } from "acme";

const client = new AcmeClient({
    environment: {
        ec2: "https://custom.ec2.aws.com",
        s3: "https://custom.s3.aws.com",
    },
    token: "<YOUR_API_KEY>",
})
await client.s3.getPresignedURL()"
`;

exports[`multi-url-environment > invalid environment id 1`] = `
[
  {
    "message": "Environment "Unrecognized" was not found",
    "path": [],
    "severity": "WARNING",
  },
]
`;

exports[`multi-url-environment > invalid multi url environments 1`] = `
[
  {
    "message": "The provided environments are invalid; got: [ec2], expected: [ec2, s3]",
    "path": [],
    "severity": "CRITICAL",
  },
]
`;

exports[`multi-url-environment > production environment 1`] = `
"import { AcmeClient, AcmeEnvironments } from "acme";

const client = new AcmeClient({
    environment: AcmeEnvironments.Production,
    token: "<YOUR_API_KEY>",
})
await client.s3.getPresignedURL()"
`;

exports[`multi-url-environment > staging environment 1`] = `
"import { AcmeClient, AcmeEnvironments } from "acme";

const client = new AcmeClient({
    environment: AcmeEnvironments.Staging,
    token: "<YOUR_API_KEY>",
})
await client.s3.getPresignedURL()"
`;
